# snail-datapkg-demos

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
cod-road-floods/incoming_data/hickford-2023-hvt-east-africa-adaptation/: adaptation_options_and_costs.csv
cod-road-floods/incoming_data/nirandjan-2024-vulnerabilty/: road_damage.csv
cod-road-floods/scripts/: 1_download.py  2_extract.ipynb  3_direct_damage.ipynb  4_disruption.ipynb  5_adaptation.ipynb
gha-coastal-offshore-storms/scripts/: 1_download.py
gha-road-floods/scripts/: 1_download.py
nga-benue-road-floods/scripts/: 1_download.py
nga-power-floods/scripts/: 1_download.py
src/snail_datapkg/: download.py  spatial.py
zaf-power-floods/incoming_data/nirandjan-2024-vulnerabilty/: power_curves.csv
zaf-power-floods/scripts/: 1_download.py  2_extract.ipynb  3_direct_damage.ipynb  4_disruption.ipynb
