[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "snail_datapkg"
version = "0.1.0"
description = "A helper package for snail-datapkg-demos"
authors = [{ name = "Tom Russell", email = "tom.russell@ouce.ox.ac.uk" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
